--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/node": "^18.17.0"
   }
 }
